--- a/www/index2.html
+++ b/www/index2.html
@@ -55,7 +55,7 @@ font-size: 35px;
                 </select>
                 <br/>
                 <label>Fecha</label>
-                    <input type="text" id="lafecha" class="form-control"/>
+                    <input id="lafecha" class="form-control"/>
                 <br/>
                 <div style="text-align: right;">
                     <button type="button" class="btn btn-success" id='bntfiltrar' onclick="cargate();">Filtrar</button>
