--- a/www/index.html
+++ b/www/index.html
@@ -40,19 +40,19 @@
                         <input type="password" id="pass" class="form-control" />
                         </div>
                         <div style="height:10px;"></div>
-                        <input class="btn btn-default" type="button" value="Login" onclick="valida();"/>
+                        <input class="btn btn-default" id='btnvalida' type="button" value="Login" onclick="valida();"/>
                     </div>
             </div>
                     <div id="mensaje"></div>
         </div>
 </div>
- </div>
-                <script>
-       function valida(){
-        
+</div>
+<script>
+function valida(){
+document.getElementById('btnvalida').innerHTML="<img src='images/loader.gif' width='20px'/>";
 var quien=document.getElementById("user").value;
 var pass=document.getElementById("pass").value;
-        var xmlhttp=false;
+var xmlhttp=false;
 if (!xmlhttp && typeof XMLHttpRequest!='undefined') { try {xmlhttp = new XMLHttpRequest(); } catch (e) { xmlhttp=false;}}
 if (!xmlhttp && window.createRequest) {	try { xmlhttp = window.createRequest();} catch (e) { xmlhttp=false;}}
 xmlhttp.open("GET","https://www.practisis.net/mobileapilogin.php?id="+quien+"&pass="+pass,true);
