--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
                         <input type="password" id="pass" class="form-control" />
                         </div>
                         <div style="height:10px;"></div>
-                        <input class="btn btn-default" id='btnvalida' type="button" value="Login" onclick="valida();"/>
+                        <button class="btn btn-default" id='btnvalida' type="button" onclick="valida();">Login</button>
                     </div>
             </div>
                     <div id="mensaje"></div>
